# Enhancing-aqueous-solubility-prediction-models

./: .gitignore  .pre-commit-config.yaml  PFI_test.ipynb  README.md  chemprop.ipynb  chemprop_test.py  feature_analysis.ipynb  feature_correlation.ipynb  hpc_generate_fold_file.py  hpc_script.py  issue_LinReg.ipynb  linear-regression.ipynb  make_molgraph.py  model_pipeline.ipynb  obj2_ids.json  obj2_prep.ipynb  process_hpc_pfi_results.py  process_hpc_results.py  process_hpc_results.sh  pyproject.toml  random_forest.ipynb  relevant_feature_filter.py  requirements.txt  ruff.toml  sandbox2.ipynb  splits.pkl  test.csv  test.ipynb  tst.py
1-feature-generation/: 1.0generate_QFP_input.ipynb  2.0add_solubility.ipynb  2.add_solubility.ipynb  3.0feature_correlation.ipynb  3.1feature_correlation_plots.ipynb  4.0feature_analysis.ipynb  5.0which_atoms_present.ipynb  download_molecules.sh  extract_molecules.sh  strange_features.ipynb
2-linear_regression/: 1.1feature_analysis.ipynb  1.feature_correlation.ipynb  2.1issue_LinReg.ipynb  3.0.topology_vs_combo.ipynb  3.1generate_fold_file.py  3.topology_vs_combo.ipynb  4.RFE.ipynb  HuberReg_combo.pkl  HuberReg_combo2.pkl  HuberReg_combo2.py  HuberReg_combo_pure2.pkl  HuberReg_qm.pkl  HuberReg_qm2.pkl  HuberReg_qm_pure.pkl  HuberReg_topo.pkl  HuberReg_topo_pure.pkl  generate_fold_files.py  splits_combo2.pkl
3-RFE/: 4.RFE.ipynb  RFE_combo.py
3-random_forest/: 1.0random_forest.ipynb
4-KRR/: 1.0KRR_results.ipynb
4-random_forest/: 1.0random_forest.ipynb  random_forest.ipynb
5-model_compare/: compare_relevant.ipynb  model_comparison.ipynb  size_comparison.ipynb
6-GFN2_accuracy/: GFN2_accuracy.ipynb  dft_prep.ipynb  qm9_mols.csv  qm9_mols.json  qm9_mols_no_prot.json  qm9_prepare_calculation.ipynb  qm9_values_of_mols.csv  test_dft.py  test_psi4.py
7-Chemprop/: bond_featurizer.ipynb  chemprop.ipynb  chemprop_analysis.ipynb  chemprop_convergence_test.ipynb  chemprop_shap.ipynb  chemprop_splits.csv  chemprop_test.py  data_preprocess.py  (+6 more)
src/: setup.py
(+111 files in other folders)
